--- a/grannySmithWorkoutBuddy/Storyboard/Main.storyboard
+++ b/grannySmithWorkoutBuddy/Storyboard/Main.storyboard
@@ -87,10 +87,20 @@
                                     <segue destination="saG-dH-XCg" kind="presentation" identifier="MenuToWeightSegue" id="S0I-2L-zPe"/>
                                 </connections>
                             </button>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="wi8-ix-Nsa">
+                                <rect key="frame" x="148" y="670" width="118" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="volumeDidChangeWithSender:" destination="BYZ-38-t0r" eventType="valueChanged" id="jEg-XL-7Xw"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="volSlider" destination="wi8-ix-Nsa" id="6G5-qx-iH1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -496,7 +506,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="fky-Ts-2Eb"/>
+        <segue reference="4RM-VW-SPI"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="avatar1.png" width="144" height="144"/>
